Informe enviado previo al oral

--- a/Informe/Secciones/I2_requerimientos.tex
+++ b/Informe/Secciones/I2_requerimientos.tex
@@ -7,7 +7,7 @@ El amplificador de audio a diseñar debe cumplir las siguientes especificaciones
 	\item Potencia de salida nominal de \SI{40}{\watt} sobre \SI{8}{\ohm} a \SI{1}{\kilo\hertz} con $THD<\num{0.02}\%$.
 	\item Potencia de salida a \SI{1}{\watt} sobre \SI{8}{\ohm} con $THD<\num{0.01}\%$. 
 	\item Respuesta en frecuencia \SI{20}{\hertz} a \SI{20}{\kilo\hertz}.
-	\item Tensión de \textit{offset} en la salida en continua \SI{5}{\milli\volt}.
+	\item Tensión de \textit{offset} en la salida en continua \si{\milli\volt}.
 	\item \textit{Slew Rate} $\approx$ \SI{10}{\volt\per\micro\second}.
 	\item Distorsión IMD cercana al 1\%.
 	\item Impedancia de entrada del orden de \SI{100}{\kilo\ohm}.
