--- a/Informe/main.tex
+++ b/Informe/main.tex
@@ -165,10 +165,10 @@
 		\section{Instrumentos utilizados}
 			\input{VII1_instrumentos.tex}
 
-		\section{Validación y resultados}
-			\input{VII2_valid.tex}
-			%\input{VII2_valid_ro.tex}
 		\section{Validación}
+			\input{VII2_valid.tex}
+			\input{VII2_valid_2.tex}
+		\section{Resultados}
 			\input{VIII2_resultados.tex}
 	\part{Conclusiones}\label{part:conclusiones}
 		\input{VIII_conclusiones.tex}
